--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -47,9 +47,13 @@
     <div class="container-banner">
       <h1>OUR &ensp; PARTNERS</h1>
     </div>
-    <div class="card-join-community text-left col-sm-8 offset-sm-2">
+  </div>
+    <div class="header-text-card text-left col-sm-8 offset-sm-2">
       <h3>CREATING AN IMPACT TOGETHER</h3>
     </div>
+  <div class="partners-card col-lg-4 col-md-6 col-sm-8">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci fugit, quae vero earum consectetur architecto, iure totam aut doloremque quasi recusandae dolore unde nemo eius dignissimos. Placeat qui, odit porro!</p>
+   <p> <%= image_tag 'communityicon.jpg', class:"image-home-large" %></p>
   </div>
 </div>
 <!-- Contact US Section -->
@@ -59,6 +63,16 @@
       <h1>CONTACT &ensp; US</h1>
     </div>
   </div>
+    <div class="header-text-card text-left col-sm-8 offset-sm-2">
+      <h3>CONNECT WITH US</h3>
+    </div>
+    <div class="contact-info text-center">
+      <h3>We'd love to hear from you!</h3>
+      <p>team.dreamcolab@gmail.com</p>
+      <p>facebook: www.facebook.com/dreamcolaborg</p>
+      <p>instagram: @dreamcolab </p>
+    </div>
+
 </div>
 <!-- Run carousel partial -->
 <!-- <script>
