--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -51,9 +51,9 @@
     <div class="header-text-card text-left col-sm-8 offset-sm-2">
       <h3>CREATING AN IMPACT TOGETHER</h3>
     </div>
-  <div class="partners-card col-lg-4 col-md-6 col-sm-8">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci fugit, quae vero earum consectetur architecto, iure totam aut doloremque quasi recusandae dolore unde nemo eius dignissimos. Placeat qui, odit porro!</p>
-   <p> <%= image_tag 'communityicon.jpg', class:"image-home-large" %></p>
+  <div class="partners-card">
+   <h3><%= image_tag 'communityicon.jpg', class:"image-home-large" %></h3>
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci fugit, quae vero earum consectetur architecto, iure totam aut doloremque quasi recusandae dolore unde nemo eius dignissimos. Placeat qui, odit porro! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor error, recusandae animi. Labore iure omnis minima architecto tempora minus quod libero officia voluptates veniam animi, incidunt laudantium magnam mollitia est?</p>
   </div>
 </div>
 <!-- Contact US Section -->
