--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,17 +5,17 @@
 
 <%#= render 'homepage_carousel' %>
 <!-- Mission Info and video -->
-<div class="page-full">
+<!-- <div class="page-full"> -->
   <div class="card-join-community text-left col-sm-8 offset-sm-2">
     <h3>OUR MISSION</h3>
     <p>dreamco lab inspires children facing adversity by connecting them with creatives all around the world through shared collaborative artwork.</p>
   </div>
-  <div class="video text-center">
+  <div class="video text-center p-3 my-3">
     <iframe width="853" height="505" src="https://www.youtube.com/embed/rcZ46PbBOaI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
-</div>
+<!-- </div> -->
 <!-- Who we are-->
-<div class="page-full">
+<!-- <div class="page-full"> -->
   <div class="banner-thin" style="background-image: linear-gradient(rgba(255,255,255,0.3),rgba(255,255,255,0.3)), url(<%= image_path "homeart4.png"%>)";>
     <div class="container-banner">
       <h1>H O W &ensp; I T &ensp; W O R K S</h1>
@@ -40,9 +40,9 @@
       </div>
     </div>
   </div>
-</div>
+<!-- </div> -->
 <!--Our Partners -->
-<div class="page-full">
+<!-- <div class="page-full"> -->
   <div class="banner-thin" style="background-image: linear-gradient(rgba(255,255,255,0.3),rgba(255,255,255,0.3)), url(<%= image_path "childpainting.jpg"%>)";>
     <div class="container-banner">
       <h1>OUR &ensp; PARTNERS</h1>
@@ -55,17 +55,14 @@
    <h3><%= image_tag 'communityicon.jpg', class:"image-home-large" %></h3>
    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci fugit, quae vero earum consectetur architecto, iure totam aut doloremque quasi recusandae dolore unde nemo eius dignissimos. Placeat qui, odit porro! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor error, recusandae animi. Labore iure omnis minima architecto tempora minus quod libero officia voluptates veniam animi, incidunt laudantium magnam mollitia est?</p>
   </div>
-</div>
+<!-- </div> -->
 <!-- Contact US Section -->
-<div class="page-full">
+<!-- <div class="page-full"> -->
   <div class="banner-thin" style="background-image: linear-gradient(rgba(255,255,255,0.3),rgba(255,255,255,0.3)), url(<%= image_path "contactuspic.png"%>)";>
     <div class="container-banner">
       <h1>CONTACT &ensp; US</h1>
     </div>
   </div>
-    <div class="header-text-card text-left col-sm-8 offset-sm-2">
-      <h3>CONNECT WITH US</h3>
-    </div>
     <div class="contact-info text-center">
       <h3>We'd love to hear from you!</h3>
       <p>team.dreamcolab@gmail.com</p>
@@ -73,7 +70,7 @@
       <p>instagram: @dreamcolab </p>
     </div>
 
-</div>
+<!-- </div> -->
 <!-- Run carousel partial -->
 <!-- <script>
   $('.carousel').carousel()
