--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
 <%#= render 'homepage_carousel' %>
 <!-- Mission Info and video -->
 <!-- <div class="page-full"> -->
-  <div class="card-join-community text-left col-sm-8 offset-sm-2">
+  <div class="card-join-community col-sm-8 offset-sm-2">
     <h3>OUR MISSION</h3>
     <p>dreamco lab inspires children facing adversity by connecting them with creatives all around the world through shared collaborative artwork.</p>
   </div>
@@ -16,17 +16,17 @@
 <!-- </div> -->
 <!-- Who we are-->
 <!-- <div class="page-full"> -->
-  <div class="banner-thin" style="background-image: linear-gradient(rgba(255,255,255,0.3),rgba(255,255,255,0.3)), url(<%= image_path "homeart4.png"%>)";>
+  <div class="banner-thin" style="background-image: linear-gradient(rgba(255,255,255,0.3),rgba(255,255,255,0.3)), url(<%= image_path "homeart5.jpg"%>)";>
     <div class="container-banner">
       <h1>H O W &ensp; I T &ensp; W O R K S</h1>
     </div>
   </div>
   <div class="brand-card col-sm-8 offset-sm-2 text-center">
     <div class="row">
-      <div class="image-card col-lg-4 col-md-6 col-sm-8">
+      <div class="image-card text-center col-lg-4 col-md-6 col-sm-8">
         <p>Creators</p>
-        <p><%= image_tag 'childdraw.jpg', class:"image-home" %></p>
-        <p>Creators browse a feed of drawings from children and choose one to reinterpret.</p>
+        <p><%= image_tag 'artistphoto.jpg', class:"image-home" %></p>
+        <p>Browse drawings from children and choose one to reinterpret.</p>
       </div>
       <div class="image-card col-lg-4 col-md-6 col-sm-8">
         <p>Organizations</p>
@@ -36,7 +36,7 @@
       <div class="image-card col-lg-4 col-md-6 col-sm-8">
         <p>Individuals & Companies</p>
         <p><%= image_tag 'childhosp2.png', class:"image-home" %></p>
-        <p>Browse our gallery of collaborations between creators and children from many organizations around the world.</p>
+        <p>Browse collaborations and donate/purchase your favourite images.</p>
       </div>
     </div>
   </div>
@@ -53,7 +53,11 @@
     </div>
   <div class="partners-card">
    <h3><%= image_tag 'communityicon.jpg', class:"image-home-large" %></h3>
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci fugit, quae vero earum consectetur architecto, iure totam aut doloremque quasi recusandae dolore unde nemo eius dignissimos. Placeat qui, odit porro! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor error, recusandae animi. Labore iure omnis minima architecto tempora minus quod libero officia voluptates veniam animi, incidunt laudantium magnam mollitia est?</p>
+    <div class="partners-card-text">
+      <p>We partner with charities, hospitals, and organizations all around the world to help bring inspiration and support to their children in need. dreamco lab is always looking to establish and build long-term relationships with both local and organizations to help raise awareness.</p>
+      <p>We also work with talented individuals and art communities who share a passion for creating different forms of art and welcome everyone interested in giving back to join us in our cause.</p>
+      <p><%= link_to "Check out our partners >>" %></p>
+    </div>
   </div>
 <!-- </div> -->
 <!-- Contact US Section -->
