multiple front end changes to new design

--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -1,7 +1,7 @@
 .title h1 {
-  font-family: 'Covered By Your Grace', cursive;
+  font-family: 'Josefin Slab', serif;
   font-size: 60px;
-  color: #756c83;
+  color: #98d3bb;
   margin-top: 30px;
   margin-bottom: 50px;
   text-shadow: 1px 1px 2px;
@@ -9,7 +9,7 @@
 
 // Kid's art title on art card
 .title h4 {
-  font-family: 'Shadows Into Light', cursive;
+  font-family: 'Josefin Slab', serif;
   color: #f38181;
   font-size: 25px;
 }
