--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -1,5 +1,5 @@
 <div class="title text-center">
-  <h1>Drawings Feed</h1>
+  <h1>Drawings</h1>
 </div>
 <div class="row mx-auto">
   <% @drawings.each do |drawing| %>
