--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="title text-center">
-  <h1> WHAT WE'VE BEEN UP TO....</h1>
+  <h1> What we've been up to....</h1>
 </div>
 <!-- For admin to add a new post -->
 <div class="text-center my-3">
