--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -73,10 +73,10 @@
 
 
 .avatar-empty {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  margin-top: 0 !important;
+  margin-top: 10px;
   background-color: #746c82;
   color: white;
   display: flex;
