--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -200,12 +200,14 @@ padding-top: 10px
 }
 
 .collab-sectioning h1 {
-  margin-top: 20px;
-  font-family: 'Shadows Into Light', cursive;
+  margin-top: 50px;
+  font-family: 'Josefin Slab', serif;
   font-weight: bold;
-  color: #50C878;
+  color: #98d3bb;
   padding: 10px;
-  text-align: center;
+  text-align: left;
+  margin-left: 50px;
+  margin-bottom: 50px;
 }
 
 .card-collab-user.avatar-bordered.drawing {
