--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,27 +1,34 @@
 .navbar-dreamcolab {
-  justify-content: space-between;
   background-color:  #fbfbfb;
-  background:rgba(0,0,0,0.4);
   width: 100%;
   color: #50C878;
   box-shadow: rgba(0,0,0,0.2);
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .navbar-dreamcolab .navbar-collapse {
   flex-grow: 0;
+  width: 100vw;
+}
+
+.navbar-nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+
 }
 
 .navbar-dreamcolab .navbar-brand img {
-  margin-top: 10px;
   max-width: 360px;
   height: 80px;
 }
 
 .navbar #navbarSupportedContent .navbar-nav .nav-item .nav-link {
-  color: black;
-  font-family: 'Cutive Mono', monospace;
-  font-weight: bold;
-  font-size: 20px;
+  color: grey;
+  font-family: 'Josefin Slab', serif;
+  font-size: 22px;
+  margin-top: 15px;
 }
 
 .user-image {
