front end design changes

--- a/app/views/creators/index.html.erb
+++ b/app/views/creators/index.html.erb
@@ -1,5 +1,5 @@
 <div class="title text-center">
-  <h1>Meet Our Creators (<%= @creators.all.count %>)</h1>
+  <h1>Meet Our Creators</h1>
 </div>
 <!-- cards to show all creators -->
 <div class="index-all">
