--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
         <li class="nav-item active">
           <%= link_to "MY COLLABORATIONS", collaborations_path, class: "nav-link" %>
         </li>
-        <li> <%= link_to root_path, class: "navbar-brand ml-3 mt-0" do %>
+        <li> <%= link_to root_path, class: "navbar-brand ml-3 mx-auto" do %>
           <%= image_tag "dcl_logo_icon.png" %>
           <% end %>
         </li>
