consistency in button colors and removed emerald green color replaced with dcl green

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -11,8 +11,8 @@
 .btn-view-more {
   border-radius: 24px;
   padding: 10px;
-  background-color: #50C878;
-  color: black;
+  background-color: #756b83;
+  color: white;
   font-family: 'Cutive Mono', monospace;
   font-weight: bold;
 }
@@ -51,7 +51,7 @@
 
 .fa-cloud-download-alt {
     font-size: 50px;
-    color: #50C878;
+    color: #756c83;
     opacity: 0.5;
   &:hover{
     opacity: 1;
