--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -15,7 +15,7 @@
   font-family: 'Shadows Into Light', cursive;
   font-weight: bold;
   font-size: 50px;
-  color: #50C878;
+  color: #756c83;
   margin-top: 30px;
   margin-bottom: 30px;
   text-align: center;
@@ -33,7 +33,7 @@
 
 .container-edit h2 {
   font-family: 'Shadows Into Light', cursive;
-  color: #50C878;
+  color: #98d3bb;
   font-size: 50px;
   margin-top: 30px;
   font-weight: bold;
