--- a/app/assets/stylesheets/pages/_profiles.scss
+++ b/app/assets/stylesheets/pages/_profiles.scss
@@ -13,7 +13,7 @@
 
 .container-profile h1 {
   font-family: 'Shadows Into Light', cursive;
-  color: #50C878;
+  color: #756c83;
   font-weight: bold;
   font-size: 50px;
   text-shadow: 1px 1px 1px;
@@ -34,7 +34,7 @@
 
 .my-art-card h1 {
   font-family: 'Shadows Into Light', cursive;
-  color: #50C878;
+  color: #756c83;
   margin-top: 50px;
   font-weight: bold;
 }
