all pages and icons linked to pages, few more design changes

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -46,10 +46,10 @@
   flex-direction: column;
 }
 
-.card-collab-infos {
-  margin: 8vh 0;
+// .card-collab-infos {
+//   margin: 8vh 0;
 
-}
+// }
 
 .card-collab-infos .card-collab-user {
   position: absolute;
