--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 <!-- Mission Info and video -->
 <!-- <div class="page-full"> -->
   <div class="card-join-community col-sm-8 offset-sm-2">
-    <h3>OUR MISSION</h3>
+    <h3>Our Mission</h3>
     <p>dreamco lab inspires children facing adversity by connecting them with creatives all around the world through shared collaborative artwork.</p>
   </div>
   <div class="video text-center p-3 my-3">
@@ -25,18 +25,18 @@
     <div class="row">
       <div class="image-card text-center col-lg-4 col-md-6 col-sm-8">
         <p>Creators</p>
-        <p><%= image_tag 'artistphoto.jpg', class:"image-home" %></p>
+        <p><%= image_tag 'dezio.png', class:"image-home" %></p>
         <p>Browse drawings from children and choose one to reinterpret.</p>
       </div>
       <div class="image-card col-lg-4 col-md-6 col-sm-8">
         <p>Organizations</p>
-        <p><%= image_tag 'childhosp1.jpg', class:"image-home" %></p>
+        <p><%= image_tag 'childhosp2.png', class:"image-home" %></p>
         <p>Organizations connect children in their care to others via artwork.</p>
       </div>
       <div class="image-card col-lg-4 col-md-6 col-sm-8">
         <p>Individuals & Companies</p>
-        <p><%= image_tag 'childhosp2.png', class:"image-home" %></p>
-        <p>Browse collaborations and donate/purchase your favourite images.</p>
+        <p><%= image_tag 'publicimage.png', class:"image-home" %></p>
+        <p>Browse collaborations and interact with the artist community.</p>
       </div>
     </div>
   </div>
@@ -48,15 +48,15 @@
       <h1>OUR &ensp; PARTNERS</h1>
     </div>
   </div>
-    <div class="header-text-card text-left col-sm-8 offset-sm-2">
-      <h3>CREATING AN IMPACT TOGETHER</h3>
+    <div class="card-join-community text-left col-sm-8 offset-sm-2">
+      <h3>Creating an impact together</h3>
     </div>
   <div class="partners-card">
    <h3><%= image_tag 'communityicon.jpg', class:"image-home-large" %></h3>
     <div class="partners-card-text">
       <p>We partner with charities, hospitals, and organizations all around the world to help bring inspiration and support to their children in need. dreamco lab is always looking to establish and build long-term relationships with both local and organizations to help raise awareness.</p>
       <p>We also work with talented individuals and art communities who share a passion for creating different forms of art and welcome everyone interested in giving back to join us in our cause.</p>
-      <p><%= link_to "Check out our partners >>" %></p>
+      <p><%= link_to "Check out our partners >>", drawings_path %></p>
     </div>
   </div>
 <!-- </div> -->
@@ -69,9 +69,9 @@
   </div>
     <div class="contact-info text-center">
       <h3>We'd love to hear from you!</h3>
-      <p>team.dreamcolab@gmail.com</p>
-      <p>facebook: www.facebook.com/dreamcolaborg</p>
-      <p>instagram: @dreamcolab </p>
+      <p><strong>email:</strong> team.dreamcolab@gmail.com</p>
+      <p><strong>facebook:</strong> www.facebook.com/dreamcolaborg</p>
+      <p><strong>instagram:</strong> @dreamcolab </p>
     </div>
 
 <!-- </div> -->
