--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-weixin"></i></a>
+    <a href="http://www.facebook.com/dreamcolaborg" target="_blank""><i class="fab fa-facebook"></i></a>
+    <a href="http://www.instagram.com/dreamcolab" target="_blank""><i class="fab fa-instagram"></i></a>
+    <a href="https://www.linkedin.com/company/dreamco-lab/?viewAsMember=true" target="_blank""><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">dreamco lab <i class="fas fa-heart"></i>
   </div>
