--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,12 @@
 <!-- Banner Top -->
 
 <div class="banner" style="background-image: linear-gradient(rgba(255,255,255,0.3),rgba(255,255,255,0.3)), url(<%= image_path "leadkid.png"%>);">
+  <div class="banner-container">
+    <a>
+      <h3><%=link_to "View our Dream Gallery", dream_gallery_path, class: "button-gallery text-center" %></h3>
+    </a>
   </div>
+</div>
 
 <%#= render 'homepage_carousel' %>
 <!-- Mission Info and video -->
