--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -24,6 +24,11 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
+.banner-container {
+  width: 100vw;
+
+}
+
 .banner-thin {
   height: 250px;
   width: 100vw;
