--- a/app/views/creators/show.html.erb
+++ b/app/views/creators/show.html.erb
@@ -43,14 +43,14 @@
               <p>by <%= collab.drawing.kid.first_name %></p>
               <div class="collaboration-dates">
                 <p><strong><em>Booked on: </em></strong> <%= collab.created_at.strftime("%d / %m / %Y") %></em></strong></p>
-            <p><strong><em>Date due: </em></strong> <%= (collab.created_at + 7.days).strftime("%d / %m / %Y") %></em></strong></p>
+                <p><strong><em>Date due: </em></strong> <%= (collab.created_at + 7.days).strftime("%d / %m / %Y") %></em></strong></p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
+    <% end %>
   </div>
-</div>
-</div>
-<% end %>
-</div>
 </div>
 <!-- Collabs Done -->
 <div class="collab-sectioning text-center">
@@ -62,10 +62,8 @@
         <div class="card-collab my-3">
           <div class="flip-card">
             <div class="flip-card-inner">
-              <div class="flip-card-front" style="background-image: url('<%= cl_image_path collab.drawing.image %>')">
-              </div>
-              <div class="flip-card-back" style="background-image: url('<%= cl_image_path collab.collab_upload %>')">
-              </div>
+              <div class="flip-card-front" style="background-image: url('<%= cl_image_path collab.drawing.image %>')"></div>
+              <div class="flip-card-back" style="background-image: url('<%= cl_image_path collab.collab_upload %>')"></div>
             </div>
           </div>
           <div class="card-collab-infos">
@@ -74,12 +72,12 @@
             <p><strong><em>brought to life by</em></strong> <%= collab.creator.first_name %></p>
             <%= link_to collaboration_upvote_path(collab) do %> <i class="far fa-heart"></i>  <%= "#{collab.votes_for.size}" %>
             <% end %>
-          </div class="text-center">
-          <%= link_to "View Full Collab", creator_collaboration_path(collab.creator, collab), class:"btn-view-more" %>
+            </div class="text-center">
+              <%= link_to "View Full Collab", creator_collaboration_path(collab.creator, collab), class:"btn-view-more" %>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
+    <% end %>
   </div>
-<% end %>
-</div>
 </div>
