minor homepage changes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,8 +58,8 @@
   <div class="partners-card">
    <h3><%= image_tag 'communityicon.jpg', class:"image-home-large" %></h3>
     <div class="partners-card-text">
-      <p>We partner with charities, hospitals, and organizations all around the world to help bring inspiration and support to their children in need. dreamco lab is always looking to establish and build long-term relationships with both local and organizations to help raise awareness.</p>
-      <p>We also work with talented individuals and art communities who share a passion for creating different forms of art and welcome everyone interested in giving back to join us in our cause.</p>
+      <p>We partner with charities, hospitals, and organizations all around the world to help bring inspiration and support to their children in need. dreamco lab is always looking to establish and build long-term relationships with both local and global organizations to help raise awareness.</p>
+      <p>We also work with talented individuals and art communities who share a passion for creating different forms of art, and welcome everyone interested in giving back to join us in our cause. Together we can make a difference in helping those who need us most.</p>
       <p><%= link_to "Check out our partners >>", drawings_path %></p>
     </div>
   </div>
