description on dream gallery page

--- a/app/views/pages/dream_gallery.html.erb
+++ b/app/views/pages/dream_gallery.html.erb
@@ -1,4 +1,7 @@
 <div class="title text-center">
   <h1>Dream Gallery</h1>
+  <div class="container-gallery-info">
+    <h4>Welcome to our Dream Gallery! Here you will find all of the collaborative artwork created between children and creatives. Each original piece is imagined and inspired by a child under the care of a hospital, organization, or charity from all around the world, and the attached remastered piece is done by one artist who has chosen to bring that child's dream to reality, and a smile to his or her face. </h4>
+  </div>
   <%= render 'dream_gallery', limit: nil %>
 </div>
