--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,9 +14,10 @@
     <h3>Our Mission</h3>
     <p>dreamco lab inspires children facing adversity by connecting them with creatives all around the world through shared collaborative artwork.</p>
   </div>
-  <div class="video text-center p-3 my-3">
-    <iframe width="853" height="505" src="https://www.youtube.com/embed/rcZ46PbBOaI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="video-container">
+    <iframe width="853" height="480" src="https://www.youtube.com/embed/rcZ46PbBOaI" frameborder="0" allowfullscreen></iframe>
   </div>
+
 <!-- </div> -->
 <!-- Who we are-->
 <!-- <div class="page-full"> -->
