--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -117,6 +117,12 @@ height: 60%;
   text-align: left;
 }
 
+.card-join-community h4 {
+  font-family: 'Josefin Slab', serif;
+  font-weight: bold;
+  color: #756c83;
+}
+
 .card-join-community p {
   font-family: 'Cutive Mono', monospace ;
   font-size: 20px;
@@ -198,6 +204,10 @@ padding: 20px;
 }
 }
 
+.image-card a {
+  color: #98d3bb;
+}
+
 .image-home {
   border-radius: 50%;
   width: 200px;
@@ -268,6 +278,11 @@ body {
 
 // MEDIA IPHONE & IPAD
 @media only screen and (max-width: 770px) {
+.image-logo {
+  margin-left: 50px !important ;
+  margin-bottom: 20px;
+}
+
 .card-join-community h3 {
   margin-left: 14%;
 }
