--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -35,7 +35,13 @@
   margin-bottom: 50px;
 }
 
-
+.text-signup {
+  text-decoration: none;
+  color: white;
+ &:hover {
+  color: #98d3bb;
+ }
+}
 
 // .container h1 {
 //   font-family: 'Shadows Into Light', cursive;
