--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,17 @@
+
 <div class="brand-card col-sm-8 offset-sm-2 text-center">
   <div class="card-join-community text-center col-sm-8 offset-sm-2">
     <h4>JOIN OUR COMMUNITY.</h4>
     <%= image_tag "dcl_logo_icon.png", class:"image-logo" %>
   </div>
-  <p>dreamCo lab brings hope, inspiration, and creativity to hospitalized children by connecting them with artists around the world to help bring their creations and dreams to reality. </p>
-  <div class="row">
-    <div class="image-card col-lg-6 col-md-6 col-sm-8">
-      <p><%= image_tag 'childdraw.jpg', class:"image" %></p>
-      <%= link_to "Organization", new_kid_path(@kid) %>
+  <p>dreamco lab brings hope, inspiration, and creativity to hospitalized children by connecting them with artists around the world to help bring their creations and dreams to reality. </p>
+  <p>Join us to make a difference in someone's life today. </p>
+  <div class="registration-card m-3">
+    <div class="signup-card col-lg-6 col-md-6 col-sm-8" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_path('childdraw.jpg') %>)"><%= link_to "Organization", new_kid_path(@kid), class: "text-signup" %>
+
     </div>
-    <div class="image-card col-lg-6 col-md-6 col-sm-8">
-      <p><%= image_tag 'artistphoto.jpg', class:"image" %></p>
-      <%= link_to "Creator", new_creator_path(@creator)%>
+    <div class="signup-card col-lg-6 col-md-6 col-sm-8" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_path('artistphoto.jpg') %>)">
+      <%= link_to "Creator", new_creator_path(@creator), class: "text-signup" %>
     </div>
   </div>
 </div>
