fixed absolute/relative dream gal button

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -275,6 +275,11 @@ padding-top: 10px
     height: 74%;
   }
 
+  .card-collab .card-collab-infos {
+    margin-top: -100px;
+
+  }
+
   // .card-collab-infos-upload {
   //   height: 52%;
   // }
