--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -91,9 +91,10 @@ background-color: white;
 @media only screen and (max-width: 770px) {
 
 .button-gallery {
-  bottom: 145px;
+  bottom: -430px;
   width: 80vw;
   left: 11%;
+  position: relative;
 }
 }
 
