--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -85,6 +85,10 @@
     width: 100vw;
     height: 60vh;
   }
+
+  .logins {
+    margin-left: 80px;
+  }
 }
 
 @media only screen and (min-width:771px) and (max-width:1070px) {
