--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -264,8 +264,9 @@ padding-top: 10px
     width: 100%;
     height: 97%;
   }
-    .card-collab-infos-upload {
-    height: 259px;
+
+  .card-collab-infos-upload {
+    max-height: 120%;
   }
 
   .card-collab.upload a img {
@@ -277,12 +278,7 @@ padding-top: 10px
 
   .card-collab .card-collab-infos {
     margin-top: -100px;
-
   }
-
-  // .card-collab-infos-upload {
-  //   height: 52%;
-  // }
 
   .card-collab-user.avatar-bordered.upload {
    position: absolute;
