--- a/app/views/creators/show.html.erb
+++ b/app/views/creators/show.html.erb
@@ -55,7 +55,7 @@
 <!-- Collabs Done -->
 <div class="collab-sectioning text-center">
   <h1>My Collaborations Gallery</h1>
-  <div class="row my-3 p-3">
+  <div class="row">
     <% completed = @collaborations.select{|x| x.collab_upload.filename != nil}%>
     <% completed.each do |collab| %>
       <div class="col-lg-4 col-md-6 col-sm-12">
@@ -72,9 +72,7 @@
             <p><strong><em>brought to life by</em></strong> <%= collab.creator.first_name %></p>
             <%= link_to collaboration_upvote_path(collab) do %> <i class="far fa-heart"></i>  <%= "#{collab.votes_for.size}" %>
             <% end %>
-            </div class="text-center">
-              <%= link_to "View Full Collab", creator_collaboration_path(collab.creator, collab), class:"btn-view-more" %>
-            </div>
+            <%= link_to "View Full Collab", creator_collaboration_path(collab.creator, collab), class:"btn-view-more" %>
           </div>
         </div>
       </div>
